2015-08-28 v0.2608 pjacklam
 lib/Math/BigRat.pm
  * Wrap long lines.
  * Increment version number. (Sync with blead.)

2015-08-28 v0.2607 pjacklam
 CHANGES
  * Add changes from v0.2602 to v0.2606.
 lib/Math/BigRat.pm
  * Increment version number. (Sync with blead.)
 inc/Module/Install.pm
  * Update bundled version of Module::Install from v1.08 to v1.16.

2014-04-03 v0.2606 pjacklam
 BUGS
  * Add ref to https://rt.cpan.org/Public/Dist/Display.html?Name=Math-BigRat
 MANIFEST.SKIP
  * Misc. updates.
 inc/Module/Install.pm
  * Update bundled version of Module::Install from v1.00 to v1.08.
 lib/Math/BigRat.pm
  * Fix spelling errors.
  * Avoid negative zero.
  * Various POD corrections.
  * Add refereces to CPAN testers, CPAN RT etc.
 t/bigrat.t
  * Test to avoid negative zero.

2011-02-13 v0.2602 pjacklam (1000 tests)
  * Fix spelling errors (Peter John Acklam).
  * Include latest versions test scripts shared with the Math::BigInt
    distribution (Peter John Acklam).
  * Add 00sig.t for testing the SIGNATURE file, 01load.t for explicitly
    testing module loading and showing version information useful for
    debugging (Peter John Acklam).
  * Replace pod.t and pod_cov.t by 02pod.t as a generic script for testing
    POD syntax, and 03podcov.t as a more generic script for testing POD
    coverage (Peter John Acklam).

2010-09-15 v0.26 rafl 975 tests
  * Remove obsolete test boilerplate that was once needed to test within the
    perl core (Nicholas Clark).
  * Convert tests from Test to Test::More (Nicholas Clark).

2010-09-13 v0.25 rafl 975 tests
  * Re-upload 0.24 with a fixed SIGNATURE

2009-09-09 v0.24 Leto 975 tests
  * Fix [perl RT #49565: SIGNATURES]
  * Fix [perl RT #44827: Documentation incorrect]

2009-09-08 v0.23 Leto 975 tests
  * Fix [perl RT #67244] hex "e" misunderstood by Math::BigRat

2008-04-06 v0.22 Tels 973 tests
  * fix bug ##34584: hang when calling exp (Thanx Steve Wills!)
    + broot() normalizes result