@@ -4,7 +4,7 @@
       "(C) by Tels L<http://bloodgate.com/> 2001 - 2009., Jonathan Leto <jonathan@leto.net>"
    ],
    "dynamic_config" : 1,
-   "generated_by" : "ExtUtils::MakeMaker version 7.0401, CPAN::Meta::Converter version 2.150005",
+   "generated_by" : "ExtUtils::MakeMaker version 7.1, CPAN::Meta::Converter version 2.150005",
    "license" : [
       "perl_5"
    ],
@@ -39,6 +39,6 @@
       }
    },
    "release_status" : "stable",
-   "version" : "0.2608",
+   "version" : "0.260801",
    "x_serialization_backend" : "JSON::PP version 2.27300"
 }
