@@ -8,7 +8,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: '0'
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 7.0401, CPAN::Meta::Converter version 2.150005'
+generated_by: 'ExtUtils::MakeMaker version 7.1, CPAN::Meta::Converter version 2.150005'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -21,5 +21,5 @@ no_index:
 requires:
   Math::BigInt: '1.991'
   perl: '5.006'
-version: '0.2608'
+version: '0.260801'
 x_serialization_backend: 'CPAN::Meta::YAML version 0.016'
