@@ -15,13 +15,13 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 dfc568c4c9524095fd593e625b0fbc1161a19a9b BUGS
-SHA1 8485e5757045335670a811c3a094417e376e8be8 CHANGES
+SHA1 265135853a7bac99d265cd7385bf42164b0cdae9 CHANGES
 SHA1 45554f2da419f19f59014dab3489f34a45072279 INSTALL
 SHA1 d6a6c30ee6d9ba6b9afab8bbf6a25e1b23c744e0 LICENSE
 SHA1 ffe815b79e91e3857cd5acc1f5cac43ab40398d5 MANIFEST
 SHA1 bd4ccb06fb3451d833350fdb4bd15e584c805cec MANIFEST.SKIP
-SHA1 026db2db899ce02cb69513951c2c2f371a388997 META.json
-SHA1 ffad08907d2ba681860f7548462f3802759aa04d META.yml
+SHA1 93327e4ecb637c3717abe2fb3971467a388c4d27 META.json
+SHA1 339fa564e5a1d171d7759f31aacd11921426039e META.yml
 SHA1 bf0af61e6f49695ac4f100e4888bde5ab0e30f28 Makefile.PL
 SHA1 e4ce2ac6577dd4f9c1bd869fe79b575f56afa578 README
 SHA1 eeb73cb2b02b0ffcd3fd320f9b49ca4038c3e32c TODO
@@ -33,9 +33,9 @@ SHA1 76efdca3603159e0ae0e18f19fe72a0211a69529 inc/Module/Install/Makefile.pm
 SHA1 2e33e87882d60db3913da6284dd5295e5315e18a inc/Module/Install/Metadata.pm
 SHA1 c830b819e61bda5eca077c6291293bba61b3b9f2 inc/Module/Install/Win32.pm
 SHA1 cb52b9d6f88d512d448a6f35ed0af0d1201a134b inc/Module/Install/WriteAll.pm
-SHA1 083023534023403a755618fc99fbfd12ec479b19 lib/Math/BigRat.pm
+SHA1 fb9c1b19009c0e27d54acca5bc2eec4567201f05 lib/Math/BigRat.pm
 SHA1 6e9557e746e881ab1568cdcec17ff3c4f1508502 t/00sig.t
-SHA1 d044d8cd7e63ebc7ed20b8e9dc82b34ea0c079de t/01load.t
+SHA1 c2e2fbb6ad1e70e3022b87edf58290433eb7850d t/01load.t
 SHA1 02ef05af53cb7378452590324bb21dfe61f44069 t/02pod.t
 SHA1 ff0f117c0724968b5fe3a7a242eae92d2494d610 t/03podcov.t
 SHA1 7f3122fedb394b4cd16c098fce6d6d82b884fba1 t/Math/BigRat/Test.pm
@@ -44,8 +44,8 @@ SHA1 12dba326f6091a6f4cbba3e35c79f47b993b6206 t/bigfltpm.inc
 SHA1 f4672f895d157e618fccbac54a98f96801d6f05b t/bigfltrt.t
 SHA1 cac8ffadc43c5b5fe9b1988eeff1352100c87a66 t/biglog.t
 SHA1 8d71e946854e9f164b2671cb34d92e5b3ed3abce t/bigrat.t
-SHA1 d48d1f15292c4a6782b266df887fa5800a0a6bb8 t/bigratpm.inc
-SHA1 40a83e7e9a5667bce5830fef0eb491fe1b57e913 t/bigratpm.t
+SHA1 fc960aeaf68ffaba7ae439fc87fa95d464dfd83a t/bigratpm.inc
+SHA1 9681f8edf661c59afb3fde4be35b1af3bca517d9 t/bigratpm.t
 SHA1 faa979297abb2ac84fb413c193c1d620948bf24d t/bigratup.t
 SHA1 f94f690d4df9e01de0f763f035fb7fac870504f0 t/bigroot.t
 SHA1 45b8f6e622ea2f9fd6a196310b27b9deb2b70eee t/bitwise.t
@@ -55,11 +55,11 @@ SHA1 1a2f73c91cd6a59874b9321a498f966700cb1049 t/trap.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJV4G94AAoJEGcmPl2fr166vBUIAJ6QkNbXuF30ciQOgRPxVeUK
-N9yT0S8yyuQQeottM0/2zmFMVCeWve25mvuBP0Ms2c0IWB0nui3hpwpbg17JaFSJ
-6QZoVYQu0EdHWJDDQBQ8ykDwGGJ/nZEaNQm8LwJrv5v23Lkw0/bQycCFoB0iGFrH
-517Yb/gl1u+gPbp5t+sRAEi55lFf5xvkIPisvqBr6BAqKw/B7Xx2Fyg9y2YBAJlb
-Gv+eAFS09YHdUYP0xGqWOfo8rMWYKMn/C9pFpBWVhxidGNkPkY6pnbH8NklXo26M
-HyJnNavjpbIxBsoo9Y84IwIIsrNCWqmu3aEjmmeAoccxqIDKr43SGFNTA8tSlnM=
-=XhAU
+iQEcBAEBAgAGBQJV9qypAAoJEGcmPl2fr166fKcIAKNuFv8/pMTlM+Ltpggg17JA
+HBHkStDe9Y7EFlqenSibygCmJ96JZNqSiTR75HszTo55IdzCt9XWJ4H3ekTi7dpC
+MqG8AlMakssFN96SB+5jdyKUQ92fStZXG0qdUkqN+eQJ1oSZH/YYGAPMPt1OBWQg
+GRuQ2z2l+H2J6YnKPIAcPTD1CDBV73STUNll8PlNRSbQ6cnemMMjTztlg6vQk6Z3
+LCK8vX9DYExUpz0QtqkNBZ+sM1urv65V/guNxDbfXSvyArfbLvpSx3/5TLs4eQ1v
+ZXPfORP5lZKaO+AXIDwC2voq0wvUpTsSdqRuRscJi/9PYwwHNOa01gl9PpAo4+4=
+=8xII
 -----END PGP SIGNATURE-----
