@@ -100,7 +100,7 @@ while (<DATA>)
         $try .= '$x * $y;';
       } elsif ($f eq "bdiv") {
         $try .= "$setup; \$x / \$y;";
-      } elsif ($f eq "fdiv-list") {
+      } elsif ($f eq "bdiv-list") {
         $try .= "$setup; join(',',\$x->bdiv(\$y));";
       } elsif ($f eq "brsft") {
         $try .= '$x >> $y;';
@@ -250,8 +250,8 @@ NaN:1:NaN
 -7/4:-4/32:0
 7/4:-4/32:0
 7/4:4/28:1/28
--7/4:4/28:-1/28
-7/4:-4/28:1/28
+-7/4:4/28:3/28
+7/4:-4/28:-3/28
 -7/4:-4/28:-1/28
 &fsqrt
 1:1
@@ -565,6 +565,17 @@ NaNmul:-inf:NaN
 6:120:720
 10:10000:100000
 1/4:1/3:1/12
+&bdiv-list
+0:0:NaN,0
+0:1:0,0
+1:0:inf,1
+-1:0:-inf,-1
+9:4:2,1
+-9:4:-3,3
+9:-4:-3,-3
+-9:-4:2,-1
+11/7:2/3:2,5/21
+-11/7:2/3:-3,3/7
 &bdiv
 $div_scale = 40; $round_mode = 'even'
 abc:abc:NaN
